--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div class="center">
             <p>¿Quieres acceder al sitio oficial?</p>
-            <a class="no" href="https://ru.wikihow.com/%D0%BF%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B8%D0%B2%D0%B0%D1%82%D1%8C-%D0%BA%D0%BE%D0%B6%D1%83-%D0%BB%D0%B8%D1%86%D0%B0-%D1%83%D0%B2%D0%BB%D0%B0%D0%B6%D0%BD%D0%B5%D0%BD%D0%BD%D0%BE%D0%B9">no</a>
+            <a class="no" href="https://www.wikihow.com/Use-Rose-Water-on-Your-Face">no</a>
             <a class="yes" id="link">Ir al sitio web</a>
             
         </div>
