--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <script type="text/javascript">
         let utm = window.location.href.split('?').pop(); //получаем utm
         document.getElementById('link').onclick = function() { //по клику на кнопку
-        window.location = 'https://bestracker1.me/click.php?key=pxz2alt1q0kdw28iubx7&pixel_fb=434057270564735'; //переправляем пользователя на новый адрес
+        window.location = 'https://www.wikihow.com/Use-Rose-Water-on-Your-Face'; //переправляем пользователя на новый адрес
 }
     </script>
       
